fix : text alignment and color issues

--- a/styles.css
+++ b/styles.css
@@ -471,7 +471,7 @@ body {
 }
 
 #newsletter .newstext span {
-    color: #fddde4;
+    color: white;
     /* Highlight color */
     font-weight: 700;
 }
@@ -560,7 +560,7 @@ body {
     color: #aaa;
     font-size: 14px;
     margin: 10px 0 20px;
-    max-width: 220px;
+   
 }
 
 .socials i {
